docs: publish a docs site and correct a README that described an unreleased library
The README still opened with "Status: design accepted, implementation phase" and
"No artifacts are published yet", which stopped being true when 0.1.0 shipped to
Maven Central. Its headline sample had drifted further than the prose: it used an
API shape that no longer exists (Rift.create over a bare builder, api.baseUri,
times = 1 as a named argument), so the first code a reader copies would not compile.

Rewrites it around what the library actually is now — released, four transports,
real install coordinates per effect surface — and replaces the sample with one
checked against the current DSL. ReadmeSampleSpec holds that same snippet verbatim
so it compiles in CI; a sample that does not compile is worse than no sample, and
nothing was catching the drift.

Adds the MkDocs Material site the other two repos already publish, mirroring
rift-java's setup so the three stay operationally identical: pushes to master
deploy, pull requests build with --strict so a broken internal link fails the check.
docs/index.md is written as a landing page rather than a copy of the README —
transports table, first test, installation, and where to go next — with DESIGN and
PARITY kept as reference and the ledger-pattern walkthrough as the guide.

The strict build immediately earned its place: PARITY.md and ledger-pattern.md both
linked to source files by relative path out of the docs tree, which resolves on
GitHub but not in a built site. Both now point at absolute GitHub URLs.

GitHub Pages still needs enabling on the repo (Settings → Pages → GitHub Actions);
until then the workflow builds and uploads the artifact but has nowhere to deploy.